--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Main styling properties for background, header, anchors, paragraphs and box sizing. */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -32,10 +34,6 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
@@ -50,6 +48,8 @@ p {
     font-size: 16px;
 }
 
+/* Styling for banner (main image displayed in landing page) */
+
 .markimg{
     width: 125%;
     height: auto;
@@ -60,10 +60,11 @@ p {
     height: auto;
     width: 80%;
     margin-bottom: 25px;
-    background-image: url('images\digital-marketing-meeting.jpg') repeat 0 0;
     background-size: cover;
     background-position: center;
 }
+
+/* Styiling for main service area (Image postitioning and display properties) */
 
 .float-left {
     float: left;
@@ -81,6 +82,27 @@ p {
     margin-left: 20px;
 }
 
+.main_service {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.main_service img {
+    max-height: 200px;
+    width: auto;
+}
+
+.main_service h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* Styling for side bar (benefit) section. (Icon and text properties) */
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -92,107 +114,18 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+h3 {
     margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* Styling for footer */
 
 .footer {
     padding: 30px;
